--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,6 +1,5 @@
-@import 'variables.scss';
 @import 'utils.scss';
 @import 'default.scss';
 @import 'header.scss';
 @import 'itemList.scss';
-
+@import 'components.scss';
