--- a/src/styles/default.scss
+++ b/src/styles/default.scss
@@ -1,13 +1,22 @@
+@import './variables.scss';
+
 ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-h1, h2, h3 {
-    margin: 0;
+h1,
+h2,
+h3 {
+  margin: 0;
 }
 
 p {
-    margin: 0;
+  margin: 0;
+}
+
+a {
+  color: $softLimeGreen;
+  text-decoration: none;
 }
