--- a/src/styles/itemList.scss
+++ b/src/styles/itemList.scss
@@ -1,11 +1,12 @@
 .itemList {
-    display: grid;
-    grid-gap:20px;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 200px));
+  justify-content: center;
 
-    &-element {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+  &-element {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
