--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,9 +1,14 @@
 .header {
-    display: flex;
-    align-items: center;
-    padding: 20px;
+  position: fixed;
+  top: 0;
+  z-index: 5000;
+  padding: 20px;
+  background-color: #65da9e;
+  width: 100vw;
 
-    &-itemCart {
-      margin-left: auto;
-    }
+  &-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
+}
