--- a/src/styles/itemList.scss
+++ b/src/styles/itemList.scss
@@ -1,8 +1,10 @@
 .itemList {
-  display: grid;
-  grid-gap: 20px;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 200px));
-  justify-content: center;
+  &-list {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 200px));
+    justify-content: center;
+  }
 
   &-element {
     display: flex;
