--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -10,6 +10,10 @@
   margin-bottom: 16px;
 }
 
+.l-marginTop-120 {
+  margin-top: 120px;
+}
+
 .l-content-wide {
   max-width: 1064px;
   padding: 0 16px;
