--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -1,17 +1,7 @@
-.l-paddingY-24 {
-  padding: 24px;
-}
+@import './mixins.scss';
 
-.l-marginBottom-24 {
-  margin-bottom: 24px;
-}
-
-.l-marginBottom-16 {
-  margin-bottom: 16px;
-}
-
-.l-marginTop-200 {
-  margin-top: 200px;
+.wrapper {
+  margin: 100px 0 48px;
 }
 
 .l-content-wide {
@@ -20,7 +10,53 @@
   margin: 0 auto;
 }
 
+.l-flexCenterAround {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.l-flexAlignCenter {
+  display: flex;
+  align-items: center;
+}
+
 .l-flex-justifyEnd {
   display: flex;
   justify-content: flex-end;
+}
+
+.l-paddingY-24 {
+  padding: 24px;
+}
+
+.l-marginBottom-16 {
+  margin-bottom: 16px;
+}
+
+.l-marginBottom-24 {
+  margin-bottom: 24px;
+}
+
+.l-marginBottom-36 {
+  margin-bottom: 36px;
+}
+
+.l-marginTop-200 {
+  margin-top: 200px;
+}
+
+.font-m {
+  @include font-m-regular;
+}
+
+.color-dark-100 {
+  color: $dark-100;
+}
+.color-dark-60 {
+  color: $dark-60;
+}
+
+.color-violet {
+  color: #772fc4;
 }
