--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,14 +1,23 @@
+@import './variables.scss';
+
 .header {
   position: fixed;
+  display: flex;
   top: 0;
   z-index: 5000;
-  padding: 20px;
-  background-color: #65da9e;
-  width: 100vw;
-
+  padding: 10px 30px;
+  background-color: $white;
+  width: -webkit-fill-available;
+  &-icon {
+    margin-right: 10px;
+    > svg {
+      width: 56px;
+      height: 56px;
+      fill: $softLimeGreen;
+    }
+  }
   &-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex: 1;
+    margin-right: 10px;
   }
 }
