--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,6 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
 @import 'utils.scss';
 @import 'default.scss';
 @import 'header.scss';
+@import 'title.scss';
 @import 'itemList.scss';
 @import 'components.scss';
+@import 'itemCart.scss';
+@import 'mixins.scss';
+@import 'breadcrumbs.scss';
 @import 'productDetails.scss';
