--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -1,6 +1,7 @@
 @import './variables.scss';
 
 .Card {
+  padding: 24px;
   border-radius: 6px;
   background-color: $white;
   box-shadow: 0 8px 24px rgba(56, 54, 65, 0.1), 0 1px 0 rgba(56, 54, 65, 0.1);
@@ -12,5 +13,36 @@
   border-left: 0;
   border-bottom-color: $softViolet;
   width: 442px;
-  margin: 0 10px;
+  background-color: $lightGrayish;
+}
+
+.Button {
+  @include font-m-regular;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px 24px;
+  border: none;
+  border-radius: 6px;
+  line-height: 1.3;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+
+  // Modifier
+  &--primary {
+    color: $white;
+    background-color: $strongViolet;
+  }
+
+  &--secondary {
+    color: $dark-100;
+    background-color: $white;
+    border: 1px solid $lightGrayish;
+  }
+
+  &--big {
+    padding: 12px 24px;
+    min-width: 200px;
+  }
 }
