--- a/src/styles/productDetails.scss
+++ b/src/styles/productDetails.scss
@@ -1,3 +1,21 @@
+@import './variables.scss';
+@import './mixins.scss';
+
 .productDetails {
-  margin-top: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  @include screen($small) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  &-img {
+    margin-bottom: 24px;
+    @include screen($small) {
+      margin-bottom: 0;
+    }
+  }
 }
